Fix menu cutoff in Firefox

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -378,7 +378,7 @@ dt {
     display: block;
     width: 100%;
   }
-  height: 0.4em;
+  height: 0.5em;
   overflow: hidden;
 }
 
